<resources>
    <string name="app_name">Chat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Message…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email">Please enter your email</string>
    <string name="enter_your_password">Please enter your password</string>
    <string name="password_must_be_long">Password must be at least 6 digits long</string>
    <string name="email_not_valid">Email address is not valid</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="some_error_occurred">Some error occurred</string>
    <string name="chats">Chats</string>
    <string name="people">People</string>
    <string name="settings">Settings</string>
    <string name="group_name">Group name</string>

    <string-array name="theme_entries">
        <item>Light theme</item>
        <item>Dark theme</item>
    </string-array>
    <string-array name="theme_entries_values">
        <item>light</item>
        <item>dark</item>
    </string-array>
</resources>