<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.LoginFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailFieldLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email"
            app:boxCornerRadiusBottomStart="@dimen/_8dp"
            app:boxCornerRadiusBottomEnd="@dimen/_8dp"
            app:boxCornerRadiusTopStart="@dimen/_8dp"
            app:boxCornerRadiusTopEnd="@dimen/_8dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailField"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordFieldLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            app:boxCornerRadiusBottomStart="@dimen/_8dp"
            app:boxCornerRadiusBottomEnd="@dimen/_8dp"
            app:boxCornerRadiusTopStart="@dimen/_8dp"
            app:boxCornerRadiusTopEnd="@dimen/_8dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailFieldLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordField"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgetTextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/forget_password"
            app:layout_constraintEnd_toEndOf="@id/passwordFieldLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordFieldLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            app:cornerRadius="4dp"
            android:padding="10dp"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/forgetTextBtn" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintEnd_toEndOf="@id/loginButton"
            app:layout_constraintEnd_toStartOf="@+id/signUpTextBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton" />

        <TextView
            android:id="@+id/signUpTextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/sign_up"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBaseline_toBaselineOf="@id/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>